# ASC-ODE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  demo_threejs.ipynb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/rigid_body_FEM/: Makefile  cmake_install.cmake  test_rb_fem  test_rb_fem_clean
build_release/rigid_body_FEM_GGL/: Makefile  cmake_install.cmake  test_rb_fem_GGL
build_release/rigid_body_FEM_SR/: Makefile  cmake_install.cmake  test_rb_fem_SR
build_release/src/: Makefile  cmake_install.cmake
demos/: test_alpha.cc  test_autodiff.cc  test_cube.cc  test_newmark.cc  test_ode.cc  test_shake.cc  test_verlet.cc
lib_rigid_body/: __init__.py
mass_spring/: CMakeLists.txt  bind_mass_spring.cc  kreisel.ipynb  mass_spring.cc  mass_spring.h  mass_spring.ipynb  test_mass_spring.py
mass_spring/.ipynb_checkpoints/: mass_spring_playground-checkpoint.ipynb
rigid_body/: CMakeLists.txt  Untitled.ipynb  bind_rigid_body.cc  rb_system.cc  rb_system.h  rbs-Copy1.ipynb  rbs.ipynb  rbs_modified.ipynb  rgb_system.cc  rgb_system.h  rigid_body.cc  rigid_body.h  rigid_body_fem.cc  rigid_body_fem.h  test.py  visuals.ipynb
rigid_body_FEM/: CMakeLists.txt  beam.ipynb  bind_rigid_body_FEM.cc  bind_rigid_body_FEM_clean.cc  eq_system_fem_clean.h  hammer.ipynb  pickle_generator.ipynb  rbs_fem.ipynb  rbs_fem_clean.cc  rbs_fem_clean.h  rbs_fem_pl.ipynb  rigid_body_fem.cc  rigid_body_fem.h  rigid_body_helper.h  single_body.ipynb  springs.ipynb  trafo_demo.ipynb  visuals.ipynb
rigid_body_FEM_GGL/: CMakeLists.txt  Doppel_Pendel_debug.ipynb  Doppel_Pendel_release.ipynb  bind_rigid_body_FEM_GGL.cc  eq_system_fem_GGL.h  rbs_fem-Copy1.ipynb  rbs_fem.ipynb  rbs_fem_GGL.cc  rbs_fem_GGL.h  rigid_body_helper_GGL.h
rigid_body_FEM_SR/: CMakeLists.txt  bind_rigid_body_FEM_SR.cc  eq_system_fem_SR.h  rbs_fem_SR.cc  rbs_fem_SR.h  rigid_body_helper_SR.h
src/: CMakeLists.txt  Newton.h  autodiff.h  autodiffdiff.h  nonlinfunc.h  ode.h
