# Compilation:
#   install pyodide-build==0.26.0
#   make a pyodide virtual environment
#   (test build using pip)
#   "pyodide build"

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "lib_rigid_body"
version="0.0.1"
description="rigid body mechanics implementation"
authors = [
  { name = "J. Schöberl, T. Leichtfried, L. Gauler, N. Hammer" },
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true